--- a/Perguntas_e_Respostas/style/style.css
+++ b/Perguntas_e_Respostas/style/style.css
@@ -54,7 +54,8 @@ button{
     align-items: center;
     flex-flow: column;
 
-    width: 40%;
+    width: 400px;
+    height: 350px;
     font-size: 15pt;
 }
 #enviarRespostas{
